--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 #Grails Metadata file
-#Thu May 24 01:31:33 CDT 2012
-app.grails.version=2.0.0
-plugins.hibernate=2.0.0
+#Sun May 27 18:25:54 CDT 2012
+app.grails.version=2.0.3
+app.name=grails-database-session
+plugins.hibernate=2.0.3
 plugins.release=1.0.1
+plugins.tomcat=2.0.3
