--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
-#Sun May 27 18:25:54 CDT 2012
-app.grails.version=2.0.3
+#Tue Sep 04 01:36:09 EDT 2012
+app.grails.version=2.0.4
 app.name=grails-database-session
-plugins.hibernate=2.0.3
+plugins.hibernate=2.0.4
 plugins.release=1.0.1
-plugins.tomcat=2.0.3
+plugins.tomcat=2.0.4
